reflect-demo/tests/errors/invalid_reflect_on_nested_struct.rs
#[derive(reflect::Input, reflect::Output)]
struct TestStructWithNested {
    _f: TestStructNested,
}
// #[derive(reflect::Input, reflect::Output)]
struct TestStructNested {
    _f: String,
}

fn main() {}
