reflect-demo/tests/errors/invalid_reflect_on_nested_struct.stderr
error[E0277]: the trait bound `TestStructNested: Input` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:1:10
  |
1 | #[derive(reflect::Input, reflect::Output)]
  |          ^^^^^^^^^^^^^^ the trait `Input` is not implemented for `TestStructNested`
  |
  = help: the trait `Input` is implemented for `TestStructWithNested`
  = note: this error originates in the derive macro `reflect::Input` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TestStructNested: reflect::Output` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:1:26
  |
1 | #[derive(reflect::Input, reflect::Output)]
  |                          ^^^^^^^^^^^^^^^ the trait `reflect::Output` is not implemented for `TestStructNested`
  |
  = help: the trait `reflect::Output` is implemented for `TestStructWithNested`
  = note: this error originates in the derive macro `reflect::Output` (in Nightly builds, run with -Z macro-backtrace for more info)
